--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/org.ocpsoft.prettytime/prettytime
+	implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '5.0.0.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -33,7 +35,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '5.0.0.Final'
+	compile 'org.apache.logging.log4j:log4j-api:2.14.0'
+	compile 'org.apache.logging.log4j:log4j-core:2.14.0'
+
 }
+
 
 test {
 	useJUnitPlatform()
